[package]
name = "wasm_to_png"
version = "0.2.1"
authors = ["stutxo <stutxo@proton.me>"]
edition = "2021"
description = "convert a wasm file to png"
license = "MIT"
repository = "https://github.com/stutxo/wasm_to_image"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
base64 = "0.22.0"
oxipng = "9.0.0"
